[FIX] Staff profile detail alignment tweaks

--- a/src/assets/toolkit/styles/6-components/_components.lists.scss
+++ b/src/assets/toolkit/styles/6-components/_components.lists.scss
@@ -16,39 +16,45 @@ ul.complex-list {
 
   > li {
     @include clearfix;
-    display: table;
+    display: table; // Fallback for non-flex browsers
+    display: flex;
+    align-items: center;
     padding: .8rem .1rem;
     width: 100%;
     line-height: 1.2;
-    border-bottom: 1px solid $grey-alto; //TODO: Make it $base-border
+    border-bottom: $border;
   }
 
   .caption,
   .description {
-    vertical-align: middle;
+    vertical-align: middle; // Fallback for non-flex browsers
   }
 
   .caption {
-    //@include span-columns( 9, table );
+    float: left;
     padding-right: 1.6rem;
+    width: 75%;
 
     > span {
-      margin-right: .35em;
-      color: $grey;
+      margin-right: $gap-small;
+      color: $text-weakest-color;
     }
   }
 
   .description {
-    //@include span-columns( 3, table );
+    float: left;
+    width: 25%;
 
     > em {
       font-style: normal;
-      color: $black-emperor;
-      font-size: .875rem; //TODO: Redefine
+      color: $text-weaker-color;
+      font-size: $text-size-smaller;
     }
   }
 
   @include breakpoint( $until: tablet ) {
+    > li { display: block; }
+
     .caption,
     .description {
       display: block;
@@ -56,7 +62,7 @@ ul.complex-list {
     }
 
     .caption {
-      margin-bottom: .35em;
+      margin-bottom: $gap-half;
       padding-right: 0;
     }
   }
